--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,5 @@
-#Sun Aug 28 21:41:14 ICT 2016
+#Tue Dec 03 15:48:57 MMT 2019
 execution.webUi.enablePageLoadTimeout=true
 execution.webUi.pageLoadTimeout=30
 execution.webUi.ignorePageLoadTimeOutException=false
+execution.default.selectingCapturedObjectSelectorMethod="XPATH"
